# multi_agent_exploration

./: .gitmodules  README.md  citations.txt
control/src/: rviz_goal_publisher.py
exp_control/: CMakeLists.txt  package.xml
mae_btrees/: CMakeLists.txt  package.xml
mae_btrees/include/mae_btrees/: HandleBT.h  InitBT.hpp  actions.h  actions.hpp  bt_actions.h  conditions.h  drone_actions.h  ros_comm.h  ros_comm.hpp  test_bt_actions.h  utils.h  utils.hpp
mae_btrees/include/mae_btrees/actions/: GoTo.h  GoTo.hpp  Land.h  Land.hpp  SetLocation.hpp  TakeOff.h  TakeOff.hpp  test_bt_actions.h
mae_btrees/launch/: test.launch
mae_btrees/src/: HandleBT.cpp  behavior_tree_node.cpp  test_bt.cpp
mae_btrees/src/libraries/: actions.cpp  conditions.cpp  ros_comm.cpp  utils.cpp
mae_btrees/src/libraries/actions/: CancelGoal.h  ClearTask.h  GoTo.h  GoTo3D.h  GoToBackupTarget.h  Land.h  NextTargetFromPlan.h  Recharge.h  SetLocation.h  SetNextTargetFromPlan.h  SetNextTargetGreedy.h  SetTask.h  TakeOff.h  TestActivity.h
mae_btrees/src/libraries/conditions/: BetterTargetFound.h  GreedyTargetDiscovered.h  LowBattery.h  NewPlanArrived.h  NewTaskReceived.h  TargetDiscovered.h  TargetFound.h  TaskAvailable.h  isFrontierListEmpty.h  isNearOtherDrones.h  isPlanEmpty.h
mae_btrees/src/nodes/: drone_actions.cpp  test_bt_actions.cpp  utils.cpp
mae_btrees/test/: actions.cpp  test_bt.cpp
mae_btrees/trees/: all_nodes.xml  big_tree.xml  greedy.xml  greedy_frontier_exploration.xml  main_tree.xml  nodes_sept.xml  old_test.xml  test_stept.xml  test_tree.xml  tree2.xml  tree_sept.xml
mae_control/: CMakeLists.txt  package.xml
mae_control/action/: MoveBase3D.action
mae_control/config/: base_local_planner_params.yaml  costmap_common_params.yaml  global_costmap_params.yaml  local_costmap_params.yaml
mae_control/config/turtle/: base_local_planner_params.yaml  costmap_common_params_burger.yaml  dwa_local_planner_params_burger.yaml  global_costmap_params.yaml  local_costmap_params.yaml  move_base_params.yaml
mae_control/include/mae_control/: Planner3D.h
mae_control/scripts/: rviz_goal_publisher.py  rviz_goal_publisher_node.py
mae_control/src/: Planner3D.cpp  move_base_3d_node.cpp  path_planner_3d_node.cpp  rviz_goal_publisher_node.py  vel_controller_node.py
mae_control/src/nodes/: rviz_goal_publisher_node.py  rviz_trajectory_publisher_node.py  vel_controller_node.py
mae_frontier_generation/: CMakeLists.txt  package.xml
mae_frontier_generation/include/mae_frontier_generation/: FrontierGeneration.h  utils.h
mae_frontier_generation/src/: FrontierGeneration.cpp  frontier_generation.cpp  frontier_generation_node.cpp  utils.cpp
mae_simulator/: CMakeLists.txt  package.xml
mae_simulator/config/: log_verbosity.conf
mae_simulator/launch/: greedy_frontiter_exploration_single_uav.launch  manual.launch  mav_bare.launch  mav_hovering_lidar.launch  multi_drone.launch  multi_uav.launch  multi_uav_global_comm.launch  single.launch  single_drone.launch  single_uav.launch  spawn_mav.launch  test.launch
mae_simulator/launch/helpers/: single_complete.launch  single_drone_spawn.launch  spawn_mav.launch  spawn_turtlebot.launch  spawn_uav.launch  spawn_uav_complete.launch
mae_simulator/rviz/: global.rviz  global_comm.rviz  lidar.rviz  model_viewer.rviz  single.rviz
mae_simulator/urdf/: generic_odometry_camera.xacro  mav_generic_odometry_and_lidar.gazebo  mav_generic_odometry_and_lidar.xacro  turtlebot3_burger.gazebo.xacro  turtlebot3_burger.urdf.xacro
mae_simulator/worlds/: basic.world  cave.world  empty.world  maze1.world  maze2.world  office.world  office2.world
mae_simulator/worlds/map1_design/: model.sdf
mae_utils/: CMakeLists.txt  package.xml
mae_utils/include/mae_utils/: utils.h
mae_utils/src/: drone_comm_node.py  global_communication_node.py  global_map_sharing_node.py  gui_node.py  point_cloud_reposter_node.py  publish_pose.py  utils.cpp
multi_agent_exploration/: CMakeLists.txt  package.xml
simulator/: CMakeLists.txt  package.xml
simulator/launch/: spawn_mav.launch
simulator/urdf/: mav_generic_odometry_and_lidar.gazebo
simulator/worlds/: map1.world
simulator/worlds/map1_design/: model.config
velodyne_simulator/velodyne_description/rviz/: example.rviz
velodyne_simulator/velodyne_description/urdf/: HDL-32E.urdf.xacro  VLP-16.urdf.xacro  example.urdf.xacro
