<package>
  <name>mae_btrees</name>
  <version>1.0.1</version>
  <description>
 This package utilizes the behaviortree_cpp_v3 library, to create a mission level controller for the Agents.
  </description>

  <maintainer email="gimarkostamos@gmail.com">Georgios Markostamos</maintainer>

  <license>MIT</license>

  <author>Georgios Markostamos</author>

  <build_depend>roscpp</build_depend>
  <build_depend>std_msgs</build_depend>
  <build_depend>behaviortree_cpp_v3</build_depend>
  <build_depend>actionlib</build_depend>
  <build_depend>actionlib_msgs</build_depend>
  <build_depend>geometry_msgs</build_depend>
  <build_depend>mae_utils</build_depend>
  <build_depend>mae_control</build_depend>
  <run_depend>mae_utils</run_depend>
  <run_depend>mae_control</run_depend>
  <run_depend>roscpp</run_depend>
  <run_depend>std_msgs</run_depend>
  <run_depend>behaviortree_cpp_v3</run_depend>
  <run_depend>actionlib</run_depend>
  <run_depend>actionlib_msgs</run_depend>
  <run_depend>geometry_msgs</run_depend>

  <build_depend>message_generation</build_depend>
  <run_depend>message_generation</run_depend>

  <buildtool_depend>catkin</buildtool_depend>

</package>
