<?xml version="1.0"?>
<package format="2">
  <name>mae_control</name>
  <version>0.0.0</version>
  <description>The control package</description>

  <maintainer email="gimarkostamos@gmail.com">George Markostamos</maintainer>

  <license>MIT</license>

  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>rospy</build_depend>
  <build_export_depend>rospy</build_export_depend>
  <exec_depend>rospy</exec_depend>
  <exec_depend>geometry_msgs</exec_depend>
  <exec_depend>tf</exec_depend>
  <exec_depend>move_base</exec_depend>

</package>
