<?xml version="1.0"?>
<package format="2">
  <name>mae_frontier_generation</name>
  <version>1.0.1</version>
  <description>
    This Package is used to generate frontiers in 2d and 3d space.
  </description>

  <maintainer email="gimarkostamos@gmail.com">Georgios Markostamos</maintainer>

  <license>MIT</license>

  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>roscpp</build_depend>
  <build_depend>std_msgs</build_depend>
  <build_depend>geometry_msgs</build_depend>
  <build_depend>nav_msgs</build_depend>
  <build_depend>octomap_msgs</build_depend>
  <build_depend>message_generation</build_depend>
  <build_depend>mae_utils</build_depend>
  <exec_depend>mae_utils</exec_depend>  
  <exec_depend>roscpp</exec_depend>
  <exec_depend>std_msgs</exec_depend>
  <exec_depend>octomap_msgs</exec_depend>
  <exec_depend>geometry_msgs</exec_depend>
  <exec_depend>nav_msgs</exec_depend>
  <exec_depend>message_generation</exec_depend>
  <exec_depend>message_runtime</exec_depend>
  
  <build_depend>octomap</build_depend>
  <exec_depend>octomap</exec_depend>

</package>
