<?xml version="1.0"?>
<package format="2">
  <name>mae_simulator</name>
  <version>0.0.0</version>
  <description>Launch files, training scenarios and world models</description>

  <maintainer email="gimarkostamos@gmail.com">George Markostamos</maintainer>

  <license>MIT</license>

  <exec_depend>velodyne_simulator</exec_depend>
  <exec_depend>mae_control</exec_depend>
  <buildtool_depend>catkin</buildtool_depend>
  <exec_depend>octomap_server</exec_depend>
  <exec_depend>xacro</exec_depend>
  <exec_depend>mae_frontier_generation</exec_depend>
  <exec_depend>mae_btrees</exec_depend>

</package>
