<package format="2">
  <name>multi_agent_exploration</name>
  <version>0.0.0</version>
  <description>multi_agent_exploration</description>

  <maintainer email="gimarkostamos@gmail.com">George Markostamos</maintainer>


  <author>George Markostamos</author>
  <license>TODO</license>

  <!-- Dependencies which this package needs to build itself. -->
  <buildtool_depend>catkin</buildtool_depend>

  <!-- Dependencies needed after this package is compiled. -->
  <exec_depend>rotors_simulator</exec_depend>
  <exec_depend>mae_simulator</exec_depend>
  <exec_depend>velodyne_simulator</exec_depend>
  <exec_depend>mae_control</exec_depend>
  <exec_depend>aloam_velodyne</exec_depend>
  
  <export>
    <metapackage/>
  </export>
</package>
