<package format="2">
  <name>multi_agent_exploration</name>
  <version>0.0.0</version>
  <description>Multi agent exploration central metapackage</description>

  <maintainer email="gimarkostamos@gmail.com">George Markostamos</maintainer>


  <author>George Markostamos</author>
  <license>MIT</license>
  <buildtool_depend>catkin</buildtool_depend>
  <exec_depend>rotors_simulator</exec_depend>
  <exec_depend>mae_simulator</exec_depend>
  <exec_depend>velodyne_simulator</exec_depend>
  <exec_depend>mae_control</exec_depend>
  <exec_depend>mae_utils</exec_depend>
  <exec_depend>eband_local_planner</exec_depend>
  <exec_depend>mae_btrees</exec_depend>
  <exec_depend>groot</exec_depend>
  
  
  
  <export>
    <metapackage/>
  </export>
</package>
